--- a/login.html
+++ b/login.html
@@ -57,6 +57,13 @@
             display: flex;
             flex-direction: column;
         }
+        .form a {
+            color: var(--hospital-green);
+            font-size: var(--sm);
+            text-align: center;
+            text-decoration: none;
+            margin-bottom: 52px;
+        }
         .label {
             font-size: var(--sm);
             font-size: bold;
@@ -70,6 +77,9 @@
             font-size: var(--md);
             padding: 6px;
         }
+        .input-email {
+            margin-bottom: 22px;
+        }
         .primary-button {
             background-color: var(--hospital-green);
             border-radius: 8px;
@@ -80,7 +90,17 @@
             cursor: pointer;
             font-size: var(--md);
             font-weight: bold;
-
+        }
+        .secondary-button {
+            background-color: var(--white);
+            border-radius: 8px;
+            border: 1px solid var(--hospital-green);
+            color: var(--hospital-green);
+            width: 100%;
+            height: 50px;
+            cursor: pointer;
+            font-size: var(--md);
+            font-weight: bold;
         }
         .login-button {
             margin-top: 14px;
@@ -90,6 +110,9 @@
             .logo {
                 display: block;
             }
+            .signup-button {
+                margin-top: 80px;
+            }
         }
     </style>
 </head>
@@ -97,23 +120,16 @@
     <div class="login">
         <div class="form-container">
             <img src="logos/logo_yard_sale.svg" alt="logo" class="logo">
-
-            <h1 class="title">
-                Create a new password
-            </h1>
-            <p class="subtitle">
-                Enter a new password for you new account
-            </p>
-
             <form action="/" class="form">
+                <label for="email" class="label">Email address</label>
+                <input type="text" id="email" placeholder="email@example.com" class="input input-email">
+    
                 <label for="password" class="label">Password</label>
                 <input type="password" id="password" placeholder="*********" class="input input-password">
-
-                <label for="new-password" class="label">Password</label>
-                <input type="password" id="new-password" placeholder="*********" class="input input-password">
-                <input type="submit" value="Confirm" class="primary-button login-button">
+                <input type="submit" value="Log in" class="primary-button login-button">
+                <a href="/">Fotgot my password</a>
             </form>
-
+            <button class="secondary-button signup-button">Sign up</button>
         </div>
     </div>
 </body>
