--- a/email-sent.html
+++ b/email-sent.html
@@ -83,7 +83,7 @@
         }
         .label {
             font-size: var(--sm);
-            font-size: bold;
+            font-weight: bold;
             margin-bottom: 4px;
         }
         .input {
