--- a/login.html
+++ b/login.html
@@ -66,7 +66,7 @@
         }
         .label {
             font-size: var(--sm);
-            font-size: bold;
+            font-weight: bold;
             margin-bottom: 4px;
         }
         .input {
